# donebyfifty

./: .coverage  .gitignore  DoneBy50.docx  README.md  agents.md  build.ps1  build.spec  build_nuitka.bat  build_nuitka.sh  config.py  main.py  models.py  primitives.py  profiles.py  pyproject.toml  sales.md  simulation.py  ui.py
analysis/: de Belder analysis.md
assets/: results_enhancement.md
scripts/: build.bat  build.sh  build.spec
src/donebyfifty/: main.py  models.py  primitives.py  profiles.py  simulation.py  ui.py
tests/: conftest.py  regression.py  repro_deterministic.py  repro_divergence.py  test_golden_values.py  test_models.py  test_primitives.py  test_simulation.py  test_ui.py
