[project]
name = "montecarlo-cli"
version = "0.3.1"
description = "General-purpose Monte Carlo retirement simulator"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line_length = 100
target_version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D107"]  # __init__ docstrings are covered by class docstring

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501"]
"ui.py" = ["E501"]
